--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 
 @import "tailwindcss";
 @import './styles/menu-premium-fonts.css';
+@import './styles/home-responsive.css' ;
 
 
 /* ==========================================
