--- a/sauvegarde/src/index.css
+++ b/sauvegarde/src/index.css
@@ -1,5 +1,5 @@
 /* ========================================
-   DÉLICES D'AFRIQUE - DESIGN SYSTEM PREMIUM
+   Délices d'Afrique - DESIGN SYSTEM PREMIUM
    Plateforme Digitale de Gastronomie Africaine
    Version 1.0 - Février 2026
    ======================================== */
